cancel Edit production DB_yml

--- a/config/database.yml
+++ b/config/database.yml
@@ -51,6 +51,5 @@ test:
 production:
   <<: *default
   database: chat-space_production
-  username: root
-  password: <%= ENV['DATABASE_PASSWORD'] %>
-  socket: /var/lib/mysql/mysql.sock
+  username: chat-space
+  password: <%= ENV['CHAT-SPACE_DATABASE_PASSWORD'] %>
